Updated function for year selection, electric car, and column deleting

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7142,7 +7142,7 @@
         "id": "7Wn8u2jS26yk"
       },
       "source": [
-        "# 1. W Declare all columns which should be deleted/omitted, explain why and delete them"
+        "# 1. W Delete columns due to irrelevance or correlation"
       ]
     },
     {
@@ -7153,38 +7153,52 @@
       },
       "outputs": [],
       "source": [
-        "# Delete columns without meaning for the model\n",
-        "print(df.columns)\n",
+        "# Define function for columns dropping \n",
+        "def drop_irrelevant_columns(df, columns_to_drop):\n",
+        "    \"\"\"\n",
+        "    Drops irrelevant columns from the given DataFrame.\n",
         "\n",
-        "# List of columns to be dropped because they are pure car identifiers and have no technical meaning\n",
-        "car_identifiers = ['Ve', 'Va', 'T', 'Tan', 'VFN', 'ID', 'tvv']\n",
+        "    Parameters:\n",
+        "    df (pd.DataFrame): The DataFrame from which to drop columns.\n",
+        "    columns_to_drop (list): List of columns to drop from the DataFrame.\n",
         "\n",
-        "administrative_values = ['Date of registration', 'Status']\n",
+        "    Returns:\n",
+        "    pd.DataFrame: The updated DataFrame with specified columns removed.\n",
+        "    \"\"\"\n",
+        "    # Filter only the columns that exist in the DataFrame\n",
+        "    existing_columns_to_drop = [col for col in columns_to_drop if col in df.columns]\n",
         "\n",
-        "data_related_columns = ['r', '#identical occurences']\n",
+        "    # Drop the existing columns\n",
+        "    if existing_columns_to_drop:\n",
+        "        df.drop(existing_columns_to_drop, axis=1, inplace=True)\n",
+        "        print(f\"Dropped columns: {existing_columns_to_drop}\")\n",
+        "    else:\n",
+        "        print(\"No columns to drop were found in the DataFrame.\")\n",
         "\n",
-        "brand_related = ['Mp', 'Mh', 'Man', 'MMS']\n",
+        "    # Display the updated DataFrame\n",
+        "    print(df.columns)\n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Global lists of columns to be dropped\n",
         "\n",
-        "temporary_or_transformed = ['IT', 'IT_valid', 'IT_invalid']\n",
+        "car_identifiers = ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv']\n",
+        "administrative_values = ['Date of registration', 'Status', 'Dr', 'Vf', 'De']\n",
+        "data_related_columns = ['r', 'R', '#identical occurrences', 'Version_file']\n",
+        "brand_related = ['Mp', 'Man', 'MMS']\n",
+        "temporary_or_transformed = ['IT', 'IT_valid', 'IT_invalid', 'Ernedc (g/km)']\n",
+        "correlated_with_target = ['Enedc (g/km)', 'Erwltp (g/km)', 'Fuel consumption ', 'Fc', 'Fuel consumption', 'E (g/km)', 'Er (g/km)']\n",
         "\n",
-        "# Different measurement or to much correlation (fuel consumation)\n",
-        "correlated_with_target = ['Enedc (g/km)','Ernedc (g/km)', 'Erwltp (g/km)','Fuel consumption ']\n",
-        "\n",
-        "# Put them together\n",
-        "list_columns_drop = car_identifiers + administrative_values + data_related_columns + brand_related + correlated_with_target + temporary_or_transformed\n",
-        "\n",
-        "# Filter only the columns that exist in the DataFrame\n",
-        "existing_columns_to_drop = [col for col in list_columns_drop if col in df.columns]\n",
-        "\n",
-        "# Drop the existing columns\n",
-        "if existing_columns_to_drop:\n",
-        "    df.drop(existing_columns_to_drop, axis=1, inplace=True)\n",
-        "    print(f\"Dropped columns: {existing_columns_to_drop}\")\n",
-        "else:\n",
-        "    print(\"No columns to drop were found in the DataFrame.\")\n",
-        "\n",
-        "# Display the updated DataFrame\n",
-        "print(df.columns)"
+        "# Combine all columns into one list\n",
+        "list_of_columns = (car_identifiers + administrative_values + \n",
+        "                   data_related_columns + brand_related + \n",
+        "                   correlated_with_target + temporary_or_transformed)"
       ]
     },
     {
@@ -7208,13 +7222,39 @@
       },
       "outputs": [],
       "source": [
-        "# If there is a NaN in Electric range or a NaN in z\n",
-        "# Create the Non_Electric column: 1 if both Electric range OR z (Wh/km) are NaN, otherwise 0\n",
-        "df['Non_Electric_Car'] = (df['Electric range (km)'].isna() & df['z (Wh/km)'].isna()).astype(int)\n",
+        "def process_electric_car_data(df, replace_nan=True, make_electric_car_column=True):\n",
+        "    \"\"\"\n",
+        "    Processes the electric car data by optionally creating a Non_Electric_Car column \n",
+        "    and filling NaN values in Electric range and z (Wh/km) columns.\n",
         "\n",
-        "# Fill NaN values in Electric range (km) and z (Wh/km) with 0\n",
-        "df['Electric range (km)'].fillna(0, inplace=True)\n",
-        "df['z (Wh/km)'].fillna(0, inplace=True)"
+        "    Parameters:\n",
+        "    df (pd.DataFrame): The DataFrame containing car data.\n",
+        "    replace_nan (bool): Whether to fill NaN values in Electric range and z columns. Default is True.\n",
+        "    make_electric_car_column (bool): Whether to create the Non_Electric_Car column. Default is True.\n",
+        "\n",
+        "    Returns:\n",
+        "    pd.DataFrame: The updated DataFrame with the new column and/or filled NaN values.\n",
+        "    \"\"\"\n",
+        "    if make_electric_car_column:\n",
+        "        # Create the Non_Electric_Car column: 1 if both Electric range and z are NaN, otherwise 0\n",
+        "        df['Non_Electric_Car'] = (df['Electric range (km)'].isna() & df['z (Wh/km)'].isna()).astype(int)\n",
+        "\n",
+        "    if replace_nan:\n",
+        "        # Fill NaN values in Electric range (km) and z (Wh/km) with 0\n",
+        "        df['Electric range (km)'].fillna(0, inplace=True)\n",
+        "        df['z (Wh/km)'].fillna(0, inplace=True)\n",
+        "\n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Call function and do the processing \n",
+        "df = process_electric_car_data(df, replace_nan=True, make_electric_car_column=True)"
       ]
     },
     {
@@ -7227,6 +7267,51 @@
       "source": [
         "# Display the updated DataFrame\n",
         "count_missing_values(df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 1.Y Selecting years "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def filter_dataframe_by_year(df, year=2018):\n",
+        "    \"\"\"\n",
+        "    Filters the DataFrame by removing rows with a 'Year' less than the specified year.\n",
+        "    \n",
+        "    Parameters:\n",
+        "    df (pd.DataFrame): The DataFrame to be filtered.\n",
+        "    year (int, optional): The year threshold for filtering. Default is 2018.\n",
+        "\n",
+        "    Returns:\n",
+        "    pd.DataFrame: The filtered DataFrame with rows removed based on the year.\n",
+        "    \"\"\"\n",
+        "    # Prompt the user for a year if year is not provided\n",
+        "    if year is None:\n",
+        "        year_input = input(\"Please enter a year (default is 2018): \")\n",
+        "        year = int(year_input) if year_input else 2018\n",
+        "\n",
+        "    # Remove rows where 'Year' is less than the specified year\n",
+        "    df = df[df['Year'] >= year]\n",
+        "\n",
+        "    return df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Filter data frame for cars and entries which are jounger then 2018\n",
+        "df = filter_dataframe_by_year(df, year=2018)"
       ]
     },
     {
