Rewritten loading data function for google-drive dataset to be loaded must be in google-drive (shared: Project_CO2_DS/Data/EU Data) # Add a shortcut by clicking to the 3 dots (file_name) to the left, click "Organise" # click "Add shortcut", choose "My Drive" or another folder of your preferrence but # also in "My Drive", click ADD...

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -227,40 +227,72 @@
       "source": [
         "\n",
         "# Define loading data function for the google drive\n",
-        "def load_data_gdrive(file_name, file_path, file_id):\n",
+        "# rewritten (Victor)\n",
+        "# \n",
+        "# dataset to be loaded must be in google-drive (shared: Project_CO2_DS/Data/EU Data)\n",
+        "# Add a shortcut by clicking to the 3 dots (file_name) to the left, click \"Organise\"\n",
+        "# click \"Add shortcut\", choose \"My Drive\" or another folder of your preferrence but\n",
+        "# also in \"My Drive\", click ADD...  \n",
+        "\n",
+        "def load_data_gdrive(file_name):\n",
         "    \"\"\"\n",
-        "    Downloads a file from Google Drive by its file ID and loads a parquet or csv file.\n",
+        "    Ensures Google Drive is mounted, searches for a file by name across the\n",
+        "    entire Google Drive, and loads a parquet or csv file if found.\n",
         "\n",
         "    Parameters:\n",
-        "    file_name (str): The name to save the file as locally.\n",
-        "    file_path (str): The path to the directory where the file should be saved.\n",
-        "    file_id (str): The Google Drive file ID.\n",
+        "    file_name (str): The name of the file to load.\n",
         "\n",
         "    Returns:\n",
-        "    pd.DataFrame: The loaded data as a pandas DataFrame.\n",
+        "    pd.DataFrame: The loaded data as a pandas DataFrame, or None if the file\n",
+        "    is not found.\n",
         "    \"\"\"\n",
-        "    # Google Drive file download URL format\n",
-        "    url = f'https://drive.google.com/uc?id={file_id}'\n",
+        "    # Function to check and mount Google Drive if not already mounted\n",
+        "    def check_and_mount_drive():\n",
+        "        \"\"\"Checks if Google Drive is mounted in Colab, and mounts it if not.\"\"\"\n",
+        "        drive_mount_path = '/content/drive'\n",
+        "        if not os.path.ismount(drive_mount_path):\n",
+        "            print(\"Mounting Google Drive...\")\n",
+        "            # Import inside the condition when it's determined that mounting is needed\n",
+        "            from google.colab import drive\n",
+        "            drive.mount(drive_mount_path)\n",
+        "        else:\n",
+        "            print(\"Google Drive is already mounted.\")\n",
+        "    \n",
+        "    # Function to search for the file in Google Drive\n",
+        "    def find_file_in_drive(file_name, start_path='/content/drive/My Drive'):\n",
+        "        \"\"\"Search for a file by name in Google Drive starting from a specified path.\"\"\"\n",
+        "        for dirpath, dirnames, filenames in os.walk(start_path):\n",
+        "            if file_name in filenames:\n",
+        "                return os.path.join(dirpath, file_name)\n",
+        "        return None\n",
+        "    \n",
+        "    # Check and mount Google Drive if not already mounted\n",
+        "    check_and_mount_drive()\n",
         "\n",
-        "    # Full file path for saving\n",
-        "    full_file_path = os.path.join(file_path, file_name)\n",
-        "\n",
-        "    # Download the file\n",
-        "    print(f\"Downloading data from Google Drive (File ID: {file_id}) to: {full_file_path}\")\n",
-        "    gdown.download(url, full_file_path, quiet=False)\n",
+        "    # Find the file in Google Drive\n",
+        "    file_path = find_file_in_drive(file_name)\n",
+        "    if not file_path:\n",
+        "        print(\"File not found.\")\n",
+        "        return None\n",
         "\n",
         "    # Check file extension and load accordingly\n",
         "    if file_name.endswith('.parquet'):\n",
-        "        print(f\"Loading parquet file: {full_file_path}\")\n",
-        "        table = pq.read_table(full_file_path)\n",
+        "        print(f\"Loading parquet file: {file_path}\")\n",
+        "        table = pq.read_table(file_path)\n",
         "        df = table.to_pandas()  # Convert to pandas DataFrame\n",
         "    elif file_name.endswith('.csv'):\n",
-        "        print(f\"Loading csv file: {full_file_path}\")\n",
-        "        df = pd.read_csv(full_file_path)  # Read CSV into pandas DataFrame\n",
+        "        print(f\"Loading CSV file: {file_path}\")\n",
+        "        df = pd.read_csv(file_path)  # Read CSV into pandas DataFrame\n",
         "    else:\n",
         "        raise ValueError(\"Unsupported file format. Please provide a parquet or csv file.\")\n",
         "\n",
-        "    return df"
+        "    return df\n",
+        "\n",
+        "# test-case loading \n",
+        "# file_name = \"EU_int_combustion_FR_22-23.parquet\"\n",
+        "# df_test = load_data_gdrive(file_name)\n",
+        "# display(df_test.head())\n",
+        "# print(\"END\")\n"
       ]
     },
     {
