--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7820,41 +7820,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Loading parquet file from local path: c:\\Users\\onepl\\Desktop\\Finanzen Behörden etc - Copy\\Bewerbung\\Fortbildungen\\DS Bootcamp\\Project Co2 git\\aug24_bds_int---co2\\notebooks\\..\\data\\EU\\EU_all_current_shared_Okt_23.parquet\n"
-          ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'pq' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# The beginning of each section\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Loading the data frame\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Inspect the data frame\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mload_data_local\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEU_all_current_shared_Okt_23.parquet\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetcwd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m..\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEU\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# df = load_data_local('EU_all_current_shared_Okt_23.parquet', dos.path.abspath(os.path.join(os.getcwd(), '..', 'data')))\u001b[39;00m\n\u001b[0;32m      7\u001b[0m inspect_data(df)\n",
-            "Cell \u001b[1;32mIn[6], line 22\u001b[0m, in \u001b[0;36mload_data_local\u001b[1;34m(file_name, file_path)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file_name\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.parquet\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading parquet file from local path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfull_file_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m     table \u001b[38;5;241m=\u001b[39m \u001b[43mpq\u001b[49m\u001b[38;5;241m.\u001b[39mread_table(full_file_path)\n\u001b[0;32m     23\u001b[0m     df \u001b[38;5;241m=\u001b[39m table\u001b[38;5;241m.\u001b[39mto_pandas()  \u001b[38;5;66;03m# Convert to pandas DataFrame\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m file_name\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'pq' is not defined"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "# The beginning of each section\n",
-        "# Loading the data frame\n",
-        "# Inspect the data frame\n",
-        "df = load_data_local('EU_all_current_shared_Okt_23.parquet', dos.path.abspath(os.path.join(os.getcwd(), '..', 'data')))\n",
-        "\n",
-        "inspect_data(df)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 7,
       "metadata": {
         "id": "YSJJq4jN26yj"
@@ -8608,6 +8573,78 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 5748835 entries, 25441 to 14320950\n",
+            "Data columns (total 49 columns):\n",
+            " #   Column                 Dtype   \n",
+            "---  ------                 -----   \n",
+            " 0   ID                     Int64   \n",
+            " 1   Country                category\n",
+            " 2   VFN                    category\n",
+            " 3   Mp                     category\n",
+            " 4   Mh                     category\n",
+            " 5   Man                    category\n",
+            " 6   MMS                    category\n",
+            " 7   Tan                    category\n",
+            " 8   T                      category\n",
+            " 9   Va                     category\n",
+            " 10  Ve                     category\n",
+            " 11  Mk                     category\n",
+            " 12  Cn                     category\n",
+            " 13  Ct                     category\n",
+            " 14  Cr                     category\n",
+            " 15  r                      float32 \n",
+            " 16  m (kg)                 float32 \n",
+            " 17  Mt                     float32 \n",
+            " 18  Enedc (g/km)           float32 \n",
+            " 19  Ewltp (g/km)           float32 \n",
+            " 20  W (mm)                 float32 \n",
+            " 21  At1 (mm)               float32 \n",
+            " 22  At2 (mm)               float32 \n",
+            " 23  Ft                     category\n",
+            " 24  Fm                     category\n",
+            " 25  ec (cm3)               float32 \n",
+            " 26  ep (KW)                float32 \n",
+            " 27  z (Wh/km)              float32 \n",
+            " 28  IT                     category\n",
+            " 29  Ernedc (g/km)          float32 \n",
+            " 30  Erwltp (g/km)          float32 \n",
+            " 31  De                     float32 \n",
+            " 32  Vf                     float32 \n",
+            " 33  Status                 category\n",
+            " 34  year                   int32   \n",
+            " 35  Date of registration   category\n",
+            " 36  Fuel consumption       float32 \n",
+            " 37  ech                    category\n",
+            " 38  RLFI                   category\n",
+            " 39  Electric range (km)    float32 \n",
+            " 40  #identical occurences  float32 \n",
+            " 41  tvv                    category\n",
+            " 42  IT_valid               category\n",
+            " 43  IT_invalid             category\n",
+            " 44  IT_1                   category\n",
+            " 45  IT_2                   category\n",
+            " 46  IT_3                   category\n",
+            " 47  IT_4                   category\n",
+            " 48  IT_5                   category\n",
+            "dtypes: Int64(1), category(29), float32(18), int32(1)\n",
+            "memory usage: 843.1 MB\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 24,
       "metadata": {
         "colab": {
@@ -8628,7 +8665,7 @@
       ],
       "source": [
         "# Load data\n",
-        "df = load_data_gdrive('EU all_current_shared.parquet')"
+        "df = load_data_gdrive('EU all_current_shared_Okt_23.parquet')"
       ]
     },
     {
