Updated requirements.txt file

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -557,7 +557,7 @@
         "id": "EFKW6RcMnMcP"
       },
       "source": [
-        "# 1.U Renaming/Mapping Categories"
+        "# 1.G Renaming/Mapping Categories"
       ]
     },
     {
@@ -7819,7 +7819,7 @@
         "id": "ihtkbCtk26yj"
       },
       "source": [
-        "# 1.V Drop all data that does not contain target variable Ewltp (g/km)"
+        "# 1.H Drop all data that does not contain target variable Ewltp (g/km)"
       ]
     },
     {
@@ -7853,7 +7853,7 @@
         "id": "7Wn8u2jS26yk"
       },
       "source": [
-        "# 1. W Delete columns due to irrelevance or correlation"
+        "# 1. I Delete columns due to irrelevance or correlation"
       ]
     },
     {
@@ -7897,11 +7897,10 @@
         "id": "-rA5sD5z26yk"
       },
       "source": [
-        "# 1.X Identify electric cars\n",
+        "# 1.J Identify electric cars\n",
         "+ identify electric (or hybrid) cars by looking at electric range and electric capacity\n",
         "+ making separate column whichs marks the non electric cars\n",
-        "+ fill then all the nan values in electri range and electric capacity with 0 (because they have non, which is equal to 0)\n",
-        "+ ANNOTATION: Open for discussion with the Team"
+        "+ fill then all the nan values in electri range and electric capacity with 0 (because they have non, which is equal to 0)"
       ]
     },
     {
@@ -8383,7 +8382,7 @@
         "id": "tGsWAodQnMcx"
       },
       "source": [
-        "# 1.Y Selecting years"
+        "# 1.K Selecting years"
       ]
     },
     {
@@ -8430,7 +8429,7 @@
         "id": "zejSqtV726yl"
       },
       "source": [
-        "# 1.Y Outlier Handling"
+        "# 1.L Outlier Handling"
       ]
     },
     {
@@ -8556,7 +8555,7 @@
         "id": "5avlyLVG26yn"
       },
       "source": [
-        "# 1.Z Summary Pipeline Part 2"
+        "# 1.M Summary Pipeline Part 2"
       ]
     },
     {
@@ -8676,7 +8675,7 @@
         "id": "kCkdQGYasL8w"
       },
       "source": [
-        "# 1.ZZ Category Selection"
+        "# 1.N Category Selection"
       ]
     },
     {
@@ -8974,7 +8973,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Save Dataframe"
+        "# 1. O Save Dataframe"
       ]
     },
     {
@@ -9004,158 +9003,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 40,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "========================================\n",
-            "🚀 Basic Data Overview\n",
-            "========================================\n",
-            "🗂 Shape of the DataFrame: 10875961 rows, 24 columns\n",
-            "\n",
-            "🔍 First 5 rows of the DataFrame:\n",
-            "        Country  VFN      Mh      Mk            Cn  Ct  Cr  m (kg)      Mt  \\\n",
-            "2968982      DK  NaN   Other  SUZUKI         SWIFT  M1  M1  1045.0  1151.0   \n",
-            "2968986      DK  NaN   Other  SUZUKI         SWIFT  M1  M1   915.0  1051.0   \n",
-            "2968987      DK  NaN   Other  SUZUKI         SWIFT  M1  M1   915.0  1051.0   \n",
-            "2969039      SK  NaN   SKODA   SKODA        SUPERB  M1  M1  1560.0     NaN   \n",
-            "2969057      DK  NaN  BMW AG     BMW  X2 sDrive18i  M1  M1  1490.0  1578.0   \n",
-            "\n",
-            "         Ewltp (g/km)  ...  Fm  ec (cm3)  ep (KW) z (Wh/km)    year  ech  \\\n",
-            "2968982         135.0  ...   M    1373.0    103.0       0.0  2018.0  NaN   \n",
-            "2968986         115.0  ...   M    1242.0     66.0       0.0  2018.0  NaN   \n",
-            "2968987         115.0  ...   M    1242.0     66.0       0.0  2018.0  NaN   \n",
-            "2969039         146.0  ...   M    1968.0    110.0       0.0  2018.0  NaN   \n",
-            "2969057         149.0  ...   M    1499.0    103.0       0.0  2018.0  NaN   \n",
-            "\n",
-            "         RLFI  Electric range (km)  #identical occurences Non_Electric_Car  \n",
-            "2968982   NaN                  0.0                   86.0                1  \n",
-            "2968986   NaN                  0.0                   36.0                1  \n",
-            "2968987   NaN                  0.0                  109.0                1  \n",
-            "2969039   NaN                  0.0                   31.0                1  \n",
-            "2969057   NaN                  0.0                   28.0                1  \n",
-            "\n",
-            "[5 rows x 24 columns]\n",
-            "\n",
-            "📊 DataFrame Information:\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 10875961 entries, 2968982 to 14442791\n",
-            "Data columns (total 24 columns):\n",
-            " #   Column                 Dtype   \n",
-            "---  ------                 -----   \n",
-            " 0   Country                category\n",
-            " 1   VFN                    category\n",
-            " 2   Mh                     category\n",
-            " 3   Mk                     category\n",
-            " 4   Cn                     category\n",
-            " 5   Ct                     category\n",
-            " 6   Cr                     category\n",
-            " 7   m (kg)                 float32 \n",
-            " 8   Mt                     float32 \n",
-            " 9   Ewltp (g/km)           float32 \n",
-            " 10  W (mm)                 float32 \n",
-            " 11  At1 (mm)               float32 \n",
-            " 12  At2 (mm)               float32 \n",
-            " 13  Ft                     category\n",
-            " 14  Fm                     category\n",
-            " 15  ec (cm3)               float32 \n",
-            " 16  ep (KW)                float32 \n",
-            " 17  z (Wh/km)              float32 \n",
-            " 18  year                   float32 \n",
-            " 19  ech                    category\n",
-            " 20  RLFI                   category\n",
-            " 21  Electric range (km)    float32 \n",
-            " 22  #identical occurences  float32 \n",
-            " 23  Non_Electric_Car       int64   \n",
-            "dtypes: category(11), float32(12), int64(1)\n",
-            "memory usage: 854.5 MB\n",
-            "\n",
-            "📈 Summary Statistics of Numeric Columns:\n",
-            "             m (kg)            Mt  Ewltp (g/km)        W (mm)      At1 (mm)  \\\n",
-            "count  1.087274e+07  1.049646e+07  1.087596e+07  9.063936e+06  8.823290e+06   \n",
-            "mean   1.651865e+03  1.815376e+03  1.379253e+02  2.583273e+03  1.663308e+03   \n",
-            "std    3.146143e+02  3.396365e+02  5.580365e+01  2.069502e+02  9.800803e+01   \n",
-            "min    7.350000e+02  8.400000e+02  0.000000e+00  2.322000e+03  1.452000e+03   \n",
-            "25%    1.400000e+03  1.534000e+03  1.280000e+02  2.639000e+03  1.548000e+03   \n",
-            "50%    1.610000e+03  1.748000e+03  1.460000e+02  2.716000e+03  1.573000e+03   \n",
-            "75%    1.830000e+03  1.982000e+03  1.700000e+02  2.840000e+03  1.605000e+03   \n",
-            "max    2.512000e+03  2.709000e+03  7.300000e+02  3.165000e+03  1.700000e+03   \n",
-            "\n",
-            "           At2 (mm)      ec (cm3)       ep (KW)     z (Wh/km)          year  \\\n",
-            "count  8.818633e+06  1.035299e+07  1.042426e+07  1.087596e+07  1.087596e+07   \n",
-            "mean   1.660718e+03  1.765036e+03  1.278034e+02  2.238814e+01  2.047219e+03   \n",
-            "std    9.805202e+01  4.622119e+02  4.450583e+01  6.269555e+01  2.545805e+01   \n",
-            "min    1.423000e+03  7.500000e+02  1.950000e+01  0.000000e+00  2.018000e+03   \n",
-            "25%    1.542000e+03  1.497000e+03  9.600000e+01  0.000000e+00  2.019000e+03   \n",
-            "50%    1.574000e+03  1.950000e+03  1.100000e+02  0.000000e+00  2.021000e+03   \n",
-            "75%    1.616000e+03  1.995000e+03  1.470000e+02  0.000000e+00  2.022000e+03   \n",
-            "max    1.735000e+03  2.742000e+03  2.235000e+02  2.756000e+03  2.023000e+03   \n",
-            "\n",
-            "       Electric range (km)  #identical occurences  Non_Electric_Car  \n",
-            "count         1.087596e+07           1.087596e+07      1.087596e+07  \n",
-            "mean          2.052093e+01           5.069891e+00      8.804579e-01  \n",
-            "std           8.553851e+01           4.631397e+01      3.244253e-01  \n",
-            "min           0.000000e+00           1.000000e+00      0.000000e+00  \n",
-            "25%           0.000000e+00           1.000000e+00      1.000000e+00  \n",
-            "50%           0.000000e+00           1.000000e+00      1.000000e+00  \n",
-            "75%           0.000000e+00           2.000000e+00      1.000000e+00  \n",
-            "max           8.830000e+02           1.165800e+04      1.000000e+00  \n",
-            "\n",
-            "❓ Missing Values Overview:\n",
-            "                          Dtype Missing Count Percent Missing\n",
-            "Country                category             0           0.00%\n",
-            "VFN                    category       2555812          23.50%\n",
-            "Mh                     category             0           0.00%\n",
-            "Mk                     category          2632           0.02%\n",
-            "Cn                     category         32334           0.30%\n",
-            "Ct                     category             0           0.00%\n",
-            "Cr                     category             0           0.00%\n",
-            "m (kg)                  float32          3221           0.03%\n",
-            "Mt                      float32        379506           3.49%\n",
-            "Ewltp (g/km)            float32             0           0.00%\n",
-            "W (mm)                  float32       1812025          16.66%\n",
-            "At1 (mm)                float32       2052671          18.87%\n",
-            "At2 (mm)                float32       2057328          18.92%\n",
-            "Ft                     category             0           0.00%\n",
-            "Fm                     category             0           0.00%\n",
-            "ec (cm3)                float32        522973           4.81%\n",
-            "ep (KW)                 float32        451696           4.15%\n",
-            "z (Wh/km)               float32             0           0.00%\n",
-            "year                    float32             0           0.00%\n",
-            "ech                    category      10424961          95.85%\n",
-            "RLFI                   category      10119464          93.04%\n",
-            "Electric range (km)     float32             0           0.00%\n",
-            "#identical occurences   float32             0           0.00%\n",
-            "Non_Electric_Car          int64             0           0.00%\n",
-            "\n",
-            "🔑 Unique Values in Categorical/Object Columns:\n",
-            "Column 'Country' has 21 unique values\n",
-            "Column 'VFN' has 28734 unique values\n",
-            "Column 'Mh' has 21 unique values\n",
-            "Column 'Mk' has 1080 unique values\n",
-            "Column 'Cn' has 29066 unique values\n",
-            "Column 'Ct' has 8 unique values\n",
-            "Column 'Cr' has 3 unique values\n",
-            "Column 'Ft' has 10 unique values\n",
-            "Column 'Fm' has 7 unique values\n",
-            "Column 'ech' has 36 unique values\n",
-            "Column 'RLFI' has 1544 unique values\n"
-          ]
-        }
-      ],
-      "source": [
-        "inspect_data(df)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 1.95 **encode IT values**"
+        "# 1.P **encode IT values**"
       ]
     },
     {
@@ -9369,7 +9220,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 1.99 Load Alex df"
+        "# 1.Z Load Alex df"
       ]
     },
     {
