gdrive save function updated

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -328,15 +328,14 @@
       },
       "outputs": [],
       "source": [
-        "def save_data_gdrive(df, file_name, file_format='parquet'):\n",
+        "def save_data_gdrive(df, file_name):\n",
         "    \"\"\"\n",
         "    Ensures Google Drive is mounted and saves a DataFrame to Google Drive as a\n",
-        "    parquet or csv file.\n",
+        "    parquet or csv file, based on the file extension provided in file_name.\n",
         "\n",
         "    Parameters:\n",
         "    df (pd.DataFrame): The DataFrame to save.\n",
-        "    file_name (str): The name of the file to save (with or without extension).\n",
-        "    file_format (str): The format to save the file in ('parquet' or 'csv'). Defaults to 'parquet'.\n",
+        "    file_name (str): The name of the file to save (with the .csv or .parquet extension).\n",
         "\n",
         "    Returns:\n",
         "    str: The path where the file was saved.\n",
@@ -364,23 +363,23 @@
         "    if not os.path.exists(save_dir):\n",
         "        os.makedirs(save_dir)\n",
         "\n",
-        "    # Ensure the correct file extension is added\n",
-        "    if file_format == 'parquet' and not file_name.endswith('.parquet'):\n",
-        "        file_name += '.parquet'\n",
-        "    elif file_format == 'csv' and not file_name.endswith('.csv'):\n",
-        "        file_name += '.csv'\n",
+        "    # Automatically detect the file format from the file_name extension\n",
+        "    if file_name.endswith('.parquet'):\n",
+        "        file_format = 'parquet'\n",
+        "    elif file_name.endswith('.csv'):\n",
+        "        file_format = 'csv'\n",
         "    else:\n",
-        "        raise ValueError(\"Unsupported file format. Please use 'parquet' or 'csv'.\")\n",
+        "        raise ValueError(\"Unsupported file format. Please provide a file name with '.parquet' or '.csv' extension.\")\n",
         "\n",
         "    # Full path to save the file\n",
         "    file_path = os.path.join(save_dir, file_name)\n",
         "\n",
-        "    # Save the DataFrame\n",
+        "    # Save the DataFrame based on the detected format\n",
         "    if file_format == 'parquet':\n",
-        "        print(f\"Saving DataFrame as parquet file: {file_path}\")\n",
+        "        print(f\"Saving DataFrame as a parquet file: {file_path}\")\n",
         "        df.to_parquet(file_path, index=False)\n",
         "    elif file_format == 'csv':\n",
-        "        print(f\"Saving DataFrame as CSV file: {file_path}\")\n",
+        "        print(f\"Saving DataFrame as a CSV file: {file_path}\")\n",
         "        df.to_csv(file_path, index=False)\n",
         "\n",
         "    print(f\"File saved at: {file_path}\")\n",
