utils.py rename to utils_CO2.py

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -108,7 +108,7 @@
         "sys.path.append(os.path.abspath(os.path.join('..', 'src')))\n",
         "\n",
         "# Import utils library with custom functions\n",
-        "from utils import *\n",
+        "from utils_CO2 import *\n",
         "\n",
         "# Machine Learning libraries\n",
         "from sklearn.model_selection import train_test_split  # For splitting data into training and test sets\n",
@@ -587,7 +587,7 @@
         "# Add the src directory to the system path\n",
         "sys.path.append(os.path.abspath(os.path.join('..', 'src')))\n",
         "\n",
-        "from utils import *\n",
+        "from utils_CO2 import *\n",
         "\n",
         "# set option so that e.g. df.head() will show all columns and none are omitted\n",
         "pd.set_option('display.max_columns', None)"
