Added Cr column to delete

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8565,7 +8565,7 @@
       },
       "outputs": [],
       "source": [
-        "################################################    Declare columns to delete    ################################################\n",
+        "################################################    Declare columns to delete    #################################################\n",
         "# Global lists of columns to be dropped\n",
         "car_identifiers = ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv']\n",
         "administrative_values = ['Date of registration', 'Status', 'Dr', 'Vf', 'De']\n",
