--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -8824,7 +8824,7 @@
         "sys.path.append(os.path.abspath(os.path.join('..', 'src')))\n",
         "\n",
         "# Import utils library with custom functions\n",
-        "from utils import *\n",
+        "from utils_CO2 import *\n",
         "\n",
         "\n",
         "generate_category_lists(df, max_categories=20)"
